1999-07-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-argument-print-conversion,
	java-print-method-invocation, java-print-native-method):
	Accomodate J* to SD_* renames in directory.h.
	(java-print-native-method): Use add for creates and switch for
	createEnd.  Eliminate `update' distinction.

1999-07-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*objc-to-java-type-alist*,
	java-type-to-native-type, java-print-native-method): Use
	java.lang.String instead of String.

1999-07-23  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* java-stub.el (*removed-methods*): Remove getDisplayName, 
	getTypeName, setDisplayName, copy and remove from 
	*removed-methods*.

1999-07-21  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* java-stub.el (java-print-nextphase-class-constructor): In 
	creating phase make empty constructor that calls super().

1999-07-12  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* java-stub.el (java-print-native-class): Print setting phase
	methods in Objective-C stubs for both creating and using phase 
	implementations.

1999-07-09  Alex Lancaster  <alex@santafe.edu>

	* java-stub.el (java-print-javadoc-default-contructor): New
	function.  Print out a default constructor message for javadoc.
	(java-print-class-constructor-method): Use it there are no
	arguments to the constructor (i.e. not a convenience constructor).
	(java-print-class-phase): If a `USING' phase class, also append
	the name of the using phase protocol to the list of `implemented'
	protocols.

1999-07-06  Alex Lancaster  <alex@santafe.edu>

	* java-stub.el (java-run-all-javadoc): Only call java-print-class
	if protocol is CREATABLE.
	(java-run-all-javadoc): Make function interactive.

1999-07-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-print-native-method): Add JNIEXPORT before
	return type and JNICALL after.

1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* javacswarm.in: Run JAVAC with eval.
