@@ -851,13 +851,13 @@
                      (insert "SD_ADDJAVA (env, jobj, ")
                      t)
                     ((create-method-p method)
-                     (insert "SD_ADDJAVA (env, SD_NEXTPHASE (env, jobj), ")
+                     (insert "SD_ADDJAVA (env, SD_NEXTJAVAPHASE (env, jobj), ")
                      t)
                     ((string= "-createEnd" signature)
-                     (insert "SD_SWITCHJAVA (env, SD_NEXTPHASE (env, jobj), ")
+                     (insert "SD_NEXTPHASE (env, jobj, ")
                      t)
                     ((string= java-return "Class")
-                     (insert "(jclass) SD_ENSUREJAVA (env, ")
+                     (insert "(jclass) SD_FINDJAVACLASS (env, ")
                      t)
                     ((string= java-return "Object")
                      (insert "SD_ENSUREJAVA (env, ")
@@ -866,8 +866,7 @@
                      (insert "(*env)->NewStringUTF (env, ")
                      t)
                     (t nil))))
-        
-        (java-print-method-invocation protocol method)
+        (java-print-method-invocation protocol method )
         (when wrapped-flag (insert ")")))
       (insert ";\n")
       (when strings
